# LightFaiss

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  MANIFEST.in  build_wheel.sh  lightRAG_DBStorage.py  pyproject.toml  readme.md  setup.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/cpu-blas/: CMakeLists.txt  L2Norm.cpp  L2Norm.hpp  distance.cpp  distance.hpp
src/backend/gpu-kompute/: CMakeLists.txt  L2Norm.cpp  L2Norm.hpp  distance.cpp  distance.hpp  readShader.cpp  readShader.hpp  shader.hpp
src/backend/gpu-kompute/shaders/: L2Norm.comp  L2NormAdd.comp  L2ReNorm.comp  matmul.comp  matmul_optimized.comp  matmul_optimized2.comp  matmul_optimized2.spv  residual.spv  shader.spv
src/backend/npu-hexagon/: calculator-api.cpp  calculator-api.h  distance.cpp  distance.hpp
src/backend/npu-hexagon/dsp/: .gitignore  CMakeLists.txt  Makefile  calculator_imp.c  hexagon.min
src/backend/npu-hexagon/inc/: calculator.idl
src/index/: CMakeLists.txt  Device.hpp  FlatIndex.cpp  FlatIndex.hpp  MetricType.hpp
src/python/: CMakeLists.txt  __init__.py  module.cpp  numpy_helper.cpp  numpy_helper.hpp
src/python/binding/: L2RenormBinding.cpp  L2RenormBinding.hpp  flatIndexBinding.cpp  flatIndexBinding.hpp
src/python/common/: enum_binding.cpp  enum_binding.hpp
src/python/kp/: CMakeLists.txt
src/python/wrapper/: pyFlatIndex.cpp  pyFlatIndex.hpp
src/test/: CMakeLists.txt  testFlatIndex.cpp  testFlatIndex.py  testFlatIndexGpu.cpp  testFlatIndexSL.cpp
