# PEP 518: 指定构建系统需要的依赖
[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0,<2.10.0",
    "cmake>=3.16",
    "ninja; platform_system!='Windows'",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "edgevecdb"
dynamic = ["version"]
authors = [
  { name="EdgeVecDB Team", email="team@edgevecdb.com" },
]
description = "A lightweight vector search library optimized for edge devices"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.19.0",
    "pybind11>=2.6.0,<2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme", 
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/your-org/edgevecdb"
Repository = "https://github.com/your-org/edgevecdb.git"
Documentation = "https://edgevecdb.readthedocs.io"
"Bug Tracker" = "https://github.com/your-org/edgevecdb/issues"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[tool.setuptools.packages.find]
where = ["src/python"]
exclude = ["test*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# 详细输出
cmake.verbose = true